@@ -60,6 +60,10 @@ Lua:
    the `dont_remove` field to such movedefs. This is useful to make
    them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.
 
+AI:
+ - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
+   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions
+
 Misc:
  - remove joystick support
  - detect hangs during filesystem initialisation
